--- a/styles.css
+++ b/styles.css
@@ -82,14 +82,24 @@ input {
 }
 
 /* Tour css */
+.nav-header{
+  border-bottom: 1px solid #06e6a6;
+  width: 100%;
+  height: 60px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 5px; 
+}
+
+.nav-header i {
+  cursor: pointer;
+  text-decoration: none;
+}
+
 .start-tour-button {
   display: flex;
   align-items: center;
-  position: absolute;
-  top: 0;
-  right: 0;
-  margin-top: 4px;
-  margin-right: 6px;
   transition: 0.3;
 }
 
